# on-chain

./: README.md
docs/: onchain-dashboard-mvp.md  onchain-parser-nontechnical-slides.md  onchain-parser-schematic.md
onchain_parser/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
onchain_parser/app/: __init__.py  config.py  main.py  models.py  schemas.py
onchain_parser/app/api/: routes.py
onchain_parser/app/bitcoin/: __init__.py  parser.py  prices.py  rpc.py  sync.py
onchain_parser/app/metrics/: cdd.py  mvrv.py  nupl.py  realized_cap.py  sopr.py
onchain_parser/app/services/: ingestion_service.py  metric_service.py
onchain_parser/scripts/: init_db.py  recompute_metrics.py  sync_once.py
